Fix(Index.css) Retirando Overflow Hidden no CSS que quebrou o mapa da inovação de mostrar os seus dados

--- a/projeto-site/public/css/index.css
+++ b/projeto-site/public/css/index.css
@@ -4,7 +4,6 @@
     padding    : 0;
     margin     : 0;
     font-family: 'Poppins', sans-serif;
-    overflow-x: hidden;
 }
 ::-webkit-scrollbar-track {
     background-color: #F4F4F4;
@@ -208,7 +207,6 @@ input[type="checkbox"]:checked~.menu nav {
 .content-functions {
     height: 39rem;
     padding: 20px;
-    overflow-y: hidden;
 }
 
 .content-functions h2 {
